<resources>
    <string name="app_name">lab2g5</string>
    <string name="tareas_pendientes">Tareas pendientes:</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="codigo">Código</string>
    <string name="dni">DNI</string>
    <string name="especialidad">Especialidad</string>
    <string name="apellido">Apellido</string>
    <string name="nombreusuario">bienvenido </string>
    <string name="has_desbloqueado_la_opci_n_oscura">Has desbloqueado la opción oscura</string>
    <string name="agregar_nueva_tarea">Agregar Nueva Tarea:</string>
    <string name="agregar">Agregar</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="agregar_to_do">Agregar To Do</string>
    <string name="contador">contador</string>
    <string name="pucptodolist">PucpToDoList</string>
    <string name="no_hay_tareas_pendientes">No hay tareas pendientes</string>
    <string name="textview">TextView</string>
    <string name="registrar_sesi_n_nuevamente">Registrar Sesión Nuevamente</string>
    <string-array name="carreras">
        <item>Telecom</item>
        <item>Electrónica</item>
        <item>Mecatrónica</item>
    </string-array>
</resources>