<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab2g5.RegistroActivity">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="308dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />

    <EditText
        android:id="@+id/editTextdni"
        android:layout_width="308dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/dni"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextCodigo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextCodigo"
        app:layout_constraintTop_toBottomOf="@+id/editTextCodigo" />

    <Spinner
        android:id="@+id/spinnerCarrera"
        android:layout_width="178dp"
        android:layout_height="34dp"
        android:entries="@array/carreras"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/buttonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextdni"
        app:layout_constraintStart_toStartOf="@+id/editTextdni" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/especialidad"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCarrera"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCarrera"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="@+id/editTextdni"
        app:layout_constraintTop_toTopOf="@+id/spinnerCarrera"
        app:layout_constraintVertical_bias="0.466" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="289dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewError"
        app:layout_constraintEnd_toEndOf="@+id/editTextdni"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="@+id/editTextdni"
        app:layout_constraintTop_toBottomOf="@+id/editTextdni"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="149dp"
        android:layout_height="27dp"
        android:layout_marginBottom="32dp"
        android:text="@string/contrasena_incorrecta"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistro"
        app:layout_constraintEnd_toEndOf="@+id/editTextdni"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/editTextdni" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="126dp"
        android:layout_height="103dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/panda" />
</androidx.constraintlayout.widget.ConstraintLayout>
