<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab2g5.MainActivity2">

    <TextView
        android:id="@+id/agregarNuevaTareaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_nueva_tarea"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <EditText
        android:id="@+id/nuevaTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nueva_tarea"
        app:layout_constraintBottom_toTopOf="@+id/buttonAgregar"
        app:layout_constraintEnd_toEndOf="@+id/agregarNuevaTareaText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/agregarNuevaTareaText"
        app:layout_constraintTop_toBottomOf="@+id/agregarNuevaTareaText"
        app:layout_constraintVertical_bias="0.297"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>